--- a/scb-ui-zk/src/main/webapp/pages/shared/prihlaska.zul
+++ b/scb-ui-zk/src/main/webapp/pages/shared/prihlaska.zul
@@ -354,7 +354,7 @@
 								
 								
 								<!-- Dynamic attributes -->
-								<row sclass="row-2" >
+								<row>
 									<cell style="padding-left: 0px; padding-right: 0px;">
 										<grid hflex="1" vflex="min"
 											model="@load(vm.application.dynAttrList)">
@@ -363,40 +363,84 @@
 											</columns>
 											<template name="model">
 												<!-- Zobrazovány jsou pouze Dynamické atributy DynamickyAtributCiselniku.jeAktivni = 'true'. -->
-												<row sclass="row-2" visible="@load(empty(each.courseApplUuid)  or each.courseApplDynConfig.active)"> 
+												<row visible="@load(empty(each.courseApplUuid) or each.courseApplDynConfig.active)"> 
 													<cell>
 														<vbox hflex="1" >
-															<label value="${each.courseApplDynConfig.name}" />
-															<textbox id="${each.courseApplDynConfig.uuid.toString()}" 
-																readonly="@load(!vm.editMode)"
-																value="@bind(each.textValue) @save(each.textValue, before={submitCmd}) @validator(vm.notNullValidator, required=each.courseApplDynConfig.required)"
-																maxlength="240"
-																placeholder="*"
-																sclass="form-input-text"
-																if="${each.courseApplDynConfig.type == 'TEXT'}"
-																tooltiptext="${c:l('msg.ui.validation.err.valueRequired')}"
-																hflex="1" />
-															<hbox hflex="1" align="end" pack="end" sclass="form-grid-validation-hbox">
-																<span sclass="alert alert-danger" hflex="min" visible="@load(not empty vmsgs[each.courseApplDynConfig.uuid.toString()])" >
-																	<label value="@bind(vmsgs[each.courseApplDynConfig.uuid.toString()])" />
-																</span>
-															</hbox>	
-<!-- 															<textbox -->
-<!-- 																value="@bind(each.eaHodnota.hodnotaText) @save(each.eaHodnota.hodnotaText, before='savePolozkaCiselnikuCmd') @validator('com.ness.sdat.web.core.validators.DynamicAttributeValidator', dynAtr=each.eaDynAtrCis, ifCmpVisible=self, immediateClear=false)" -->
-<!-- 																hflex="1" -->
-<!-- 																visible="@load(each.zakladniDt eq 'TEXT')"  -->
-<!-- 																readonly="@load(!vm.perms['editablePolCis'])"/> -->
-<!-- 															<decimalbox  -->
-<!-- 																value="@bind(each.eaHodnota.hodnotaCislo) @save(each.eaHodnota.hodnotaCislo, before='savePolozkaCiselnikuCmd') @validator('com.ness.sdat.web.core.validators.DynamicAttributeValidator', dynAtr=each.eaDynAtrCis, ifCmpVisible=self, immediateClear=false)" -->
-<!-- 																maxlength="22" -->
-<!-- 																hflex="1" -->
-<!-- 																visible="@load(each.zakladniDt eq 'CISLO')"  -->
-<!-- 																readonly="@load(!vm.perms['editablePolCis'])"/> -->
-<!-- 															<datebox value="@bind(each.eaHodnota.hodnotaDatum) @converter(vm.dateDateconverter) @save(each.eaHodnota.hodnotaDatum, before='savePolozkaCiselnikuCmd') @validator('com.ness.sdat.web.core.validators.DynamicAttributeValidator', dynAtr=each.eaDynAtrCis, ifCmpVisible=self, immediateClear=false)"  -->
-<!-- 																hflex="1"  -->
-<!-- 																visible="@load(each.zakladniDt eq 'DATUM')"  -->
-<!-- 																buttonVisible="true"  -->
-<!-- 																readonly="@load(!vm.perms['editablePolCis'])"/> -->
+															<!-- Typ TEXT -->
+															<vbox hflex="1"
+																if="${each.courseApplDynConfig.type == 'TEXT'}" >
+																<label value="${each.courseApplDynConfig.name}" />
+																<textbox id="${each.courseApplDynConfig.uuid.toString()}" 
+																	readonly="@load(!vm.editMode)"
+																	value="@bind(each.textValue) @save(each.textValue, before={submitCmd}) @validator(vm.notNullValidator, required=each.courseApplDynConfig.required)"
+																	maxlength="240"
+																	placeholder="${each.courseApplDynConfig.required ? '*' : ''}"
+																	sclass="form-input-text"
+																	tooltiptext="${each.courseApplDynConfig.description}"
+																	hflex="1" />	
+																<hbox hflex="1" align="end" pack="end" sclass="form-grid-validation-hbox">
+																	<span sclass="alert alert-danger" hflex="min" visible="@load(not empty vmsgs[each.courseApplDynConfig.uuid.toString()])" >
+																		<label value="@bind(vmsgs[each.courseApplDynConfig.uuid.toString()])" />
+																	</span>
+																</hbox>
+															</vbox>
+															<!-- Typ DATE -->
+															<vbox hflex="1"
+																if="${each.courseApplDynConfig.type == 'DATE'}" >
+																<label value="${each.courseApplDynConfig.name}" />
+																<datebox id="${each.courseApplDynConfig.uuid.toString()}" 
+																	readonly="@load(!vm.editMode)"
+																	value="@bind(each.dateValue) @save(each.dateValue, before={submitCmd}) @validator(vm.notNullObjectValidator, required=each.courseApplDynConfig.required)"
+								                            		format="@load(vm.dateFormat)" 
+								                            		maxlength="@load(vm.getDateMaxlength())"
+								                            		placeholder="${each.courseApplDynConfig.required ? '*' : ''}"
+								                            		tooltiptext="${each.courseApplDynConfig.description}" />
+																<hbox hflex="1" align="end" pack="end" sclass="form-grid-validation-hbox">
+																	<span sclass="alert alert-danger" hflex="min" visible="@load(not empty vmsgs[each.courseApplDynConfig.uuid.toString()])" >
+																		<label value="@bind(vmsgs[each.courseApplDynConfig.uuid.toString()])" />
+																	</span>
+																</hbox>
+															</vbox>
+															<!-- Typ INT -->
+															<vbox hflex="1"
+																if="${each.courseApplDynConfig.type == 'INT'}" >
+																<label value="${each.courseApplDynConfig.name}" />
+																<intbox id="${each.courseApplDynConfig.uuid.toString()}" 
+																	readonly="@load(!vm.editMode)"
+																	value="@bind(each.intValue) @save(each.intValue, before={submitCmd}) @validator(vm.notNullObjectValidator, required=each.courseApplDynConfig.required)"
+																	placeholder="${each.courseApplDynConfig.required ? '*' : ''}"
+																	tooltiptext="${each.courseApplDynConfig.description}" />
+																<hbox hflex="1" align="end" pack="end" sclass="form-grid-validation-hbox">
+																	<span sclass="alert alert-danger" hflex="min" visible="@load(not empty vmsgs[each.courseApplDynConfig.uuid.toString()])" >
+																		<label value="@bind(vmsgs[each.courseApplDynConfig.uuid.toString()])" />
+																	</span>
+																</hbox>
+															</vbox>
+															<!-- Typ DOUBLE -->
+															<vbox hflex="1"
+																if="${each.courseApplDynConfig.type == 'DOUBLE'}" >
+																<label value="${each.courseApplDynConfig.name}" />
+																<doublebox id="${each.courseApplDynConfig.uuid.toString()}" 
+																	readonly="@load(!vm.editMode)"
+																	value="@bind(each.doubleValue) @save(each.doubleValue, before={submitCmd}) @validator(vm.notNullObjectValidator, required=each.courseApplDynConfig.required)"
+																	placeholder="${each.courseApplDynConfig.required ? '*' : ''}"
+																	tooltiptext="${each.courseApplDynConfig.description}" />
+																<hbox hflex="1" align="end" pack="end" sclass="form-grid-validation-hbox">
+																	<span sclass="alert alert-danger" hflex="min" visible="@load(not empty vmsgs[each.courseApplDynConfig.uuid.toString()])" >
+																		<label value="@bind(vmsgs[each.courseApplDynConfig.uuid.toString()])" />
+																	</span>
+																</hbox>
+															</vbox>
+															<!-- Typ BOOLEAN -->
+															<vbox hflex="1"
+																if="${each.courseApplDynConfig.type == 'BOOLEAN'}" >
+																<label value="${each.courseApplDynConfig.name}" />
+																<hlayout width="150px">
+																	<radiogroup id="${each.courseApplDynConfig.uuid}_dynRadioGroup" selectedItem="@bind(each.booleanValue)"  />
+																	<radio label="${c:l('txt.ui.common.yes')}" radiogroup="${each.courseApplDynConfig.uuid}_dynRadioGroup" value="${true}" />
+					                								<radio label="${c:l('txt.ui.common.no')}" radiogroup="${each.courseApplDynConfig.uuid}_dynRadioGroup" value="${false}"/>
+																</hlayout>
+															</vbox>
 														</vbox>
 													</cell>
 												</row>
