course application dyn rows, GUI validation

--- a/scb-ui-zk/src/main/webapp/resources/css/styles.css
+++ b/scb-ui-zk/src/main/webapp/resources/css/styles.css
@@ -993,6 +993,23 @@ span.login-failed{
 	border-color: red !important;
 }
 
+div.scb-z-validation-error-input{
+	border: none !important;
+}
+
+span.scb-z-validation-error-input{
+	border: none !important;
+}
+
+.scb-z-validation-error-input input.z-datebox-input{
+	border-color: red !important;
+	border-right-color: #CFCFCF !important;
+}
+
+.scb-z-validation-error-input a.z-datebox-button{
+	border-color: red !important;
+}
+
 /* FORM */
 .scb-form-grid-2 .z-cell{
 	padding: 10px 0px;
