--- a/scb-ui-zk/src/main/webapp/resources/css/styles.css
+++ b/scb-ui-zk/src/main/webapp/resources/css/styles.css
@@ -1001,6 +1001,24 @@ span.scb-z-validation-error-input{
 	border: none !important;
 }
 
+.scb-z-validation-error-input input.z-bandbox-input{
+	border-color: red !important;
+	border-right-color: #CFCFCF !important;
+}
+
+.scb-z-validation-error-input a.z-bandbox-button{
+	border-color: red !important;
+}
+
+.scb-z-validation-error-input input.z-combobox-input{
+	border-color: red !important;
+	border-right-color: #CFCFCF !important;
+}
+
+.scb-z-validation-error-input a.z-combobox-button{
+	border-color: red !important;
+}
+
 .scb-z-validation-error-input input.z-datebox-input{
 	border-color: red !important;
 	border-right-color: #CFCFCF !important;
