--- a/scb-ui-zk/src/main/webapp/pages/secured/TRAINER/ucastnik.zul
+++ b/scb-ui-zk/src/main/webapp/pages/secured/TRAINER/ucastnik.zul
@@ -209,13 +209,13 @@
 									<row>
 										<cell style="padding-left: 0px; padding-right: 0px;">
 											<grid hflex="1" vflex="min"
-												model="@load(vm.participant.dynAttrList)">
+												model="@load(vm.participant.courseParticipant.dynAttrList)">
 												<columns>
 													<column align="left" valign="bottom" />
 												</columns>
 												<template name="model">
 													<!-- Zobrazovány jsou pouze Dynamické atributy DynamickyAtributCiselniku.jeAktivni = 'true'. -->
-													<row visible="@load(empty(each.courseApplUuid) or each.courseApplDynConfig.active)"> 
+													<row visible="@load(empty(each.courseParticUuid) or each.courseApplDynConfig.active)"> 
 														<cell>
 															<vbox hflex="1" >
 																<!-- Typ TEXT -->
