dyn rows course participant export

--- a/scb-ui-zk/src/main/webapp/pages/public/dashboard.zul
+++ b/scb-ui-zk/src/main/webapp/pages/public/dashboard.zul
@@ -14,7 +14,7 @@
 		<vlayout sclass="dashboar-public">
 			<label value="${vm.welcomeInfo}" sclass="scb-headline-big"/>
 			
-			<button label="@load(vm.newCourseApplicationTitle)" 
+			<button label="${c:l('txt.ui.common.courseApplication')}" 
 				href="/pages/public/prihlaska.zul"
 				iconSclass="z-icon-file-text"
 				visible="@load(vm.isCourseApplicationAllowed())"
