payment instruction, varsymbol text, modal title

--- a/scb-ui-zk/src/main/webapp/pages/secured/ADMIN/payment-instruction-window.zul
+++ b/scb-ui-zk/src/main/webapp/pages/secured/ADMIN/payment-instruction-window.zul
@@ -1,4 +1,5 @@
 <window id="modalWindow"
+	title="${c:l('txt.ui.common.PaymentInstruction')}"
 	viewModel="@id('vm') @init('com.jzaoralek.scb.ui.pages.payments.vm.PaymentInstructionWinVM')"
 	border="normal" 
     width="750px"
