--- a/scb-ui-zk/src/main/webapp/pages/common/component/seznam-plateb-core.zul
+++ b/scb-ui-zk/src/main/webapp/pages/common/component/seznam-plateb-core.zul
@@ -156,7 +156,7 @@
 	            <listheader label="${c:l('txt.ui.common.date')}" sort="auto(paymentDate)" align="left" />
 	            <listheader label="${c:l('txt.ui.common.Type')}" sort="auto(type)" align="left" />
 	            <listheader label="${c:l('txt.ui.common.Processed')}" sort="auto(processType)" align="left" />
-	            <listheader label="${c:l('txt.ui.common.Amount')}" sort="auto(amount)" align="center" />
+	            <listheader label="${c:l('txt.ui.common.Amount')}" sort="auto(amount)" align="left" />
 	            <listheader hflex="min" align="center" />
 	        </listhead>
 	         
@@ -165,7 +165,36 @@
 	                <listcell label="${each.paymentDate}" onDoubleClick="@command('detailCmd', uuid=each.uuid)" />
 	                <listcell label="@load(each.type) @converter(vm.enumLabelConverter)" onDoubleClick="@command('detailCmd', uuid=each.uuid)" />
 	                <listcell label="@load(each.processType) @converter(vm.enumLabelConverter)" onDoubleClick="@command('detailCmd', uuid=each.uuid)" />
-	                <listcell label="${each.amount} ${c:l('txt.ui.common.CZK')}" onDoubleClick="@command('detailCmd', uuid=each.uuid)" />
+	                <listcell label="" onDoubleClick="@command('detailCmd', uuid=each.uuid)" >
+	                	<hbox hflex="1" vflex="1" align="center">
+		                	<hbox hflex="1">
+		                		<vbox hflex="1">
+				                	<label value="${each.amount} ${c:l('txt.ui.common.CZK')}" />
+		                		</vbox>
+		                		<vbox width="30px" align="center" >
+		                			<!-- Poznamka ikona -->
+				                	<a sclass="big-icon" 
+				                		iconSclass="z-icon-info-circle" 
+				                		popup="descPopup_${each.uuid}, position=after_end"
+				                		style="margin-left: 5px;" 
+				                		tooltiptext="${c:l('txt.ui.common.description')}" />
+		                		</vbox>
+		                	</hbox>
+	                	</hbox>
+	                	<!-- Poznamka popup -->
+	                	<popup id="descPopup_${each.uuid}" width="400px" >
+					    	<vbox hflex="1">
+					    		<label value="${c:l('txt.ui.common.description')}" 
+					    			width="100%" sclass="sp-popup-headline"/>
+					    		<textbox 
+									value="${each.description}"
+									multiline="true"
+									readonly="true"
+									rows="3"
+									hflex="1" />
+					    	</vbox>
+					    </popup>
+	                </listcell> 
 	                <listcell>
 						<button iconSclass="z-icon-ellipsis-h" hflex="min" width="20px" popup="menuPayment_${each.uuid}, position=after_end" if="${vm.isLoggedUserInRole('ADMIN')}" />
 	                	<menupopup id="menuPayment_${each.uuid}" if="${vm.isLoggedUserInRole('ADMIN')}" >
