--- a/scb-ui-zk/src/main/webapp/pages/secured/USER/uzivatel.zul
+++ b/scb-ui-zk/src/main/webapp/pages/secured/USER/uzivatel.zul
@@ -32,24 +32,15 @@
 						<row>
 							<cell >
 								<vbox hflex="1">
-									<label value="${c:l('txt.ui.common.email')} / ${c:l('txt.ui.common.Username')}"/>
+									<label value="${c:l('txt.ui.common.Username')}"/>
 									<label value="" />
 									<hbox hflex="1">
-										<textbox id="representativeEmail1"
-											value="@bind(fx.user.contact.email1) @validator(vm.emailValidator, notNull=true)"
-											maxlength="@load(vm.getEmailMaxlength())"
-											placeholder="*"
+										<textbox id="representativeUsername"
+											value="@bind(fx.user.username) @validator(vm.emailValidator, notNull=true)"
+											readonly="true"
 											sclass="form-input-text"
-											focus="true"
-											tooltiptext="${c:l('msg.ui.validation.err.valueRequired')}"
-											onChange="@command('validateUniqueUsernameCmd', email=self.value, fx=fx)"
 											tabindex="1"
 											hflex="1" />
-									</hbox>
-									<hbox hflex="1" align="end" pack="end" sclass="form-grid-validation-hbox">
-										<span sclass="alert alert-danger" hflex="min" visible="@load(not empty vmsgs[representativeEmail1])" >
-											<label value="@bind(vmsgs[representativeEmail1])" />
-										</span>	
 									</hbox>
 								</vbox>
 							</cell>
@@ -64,6 +55,7 @@
 										maxlength="@load(vm.getFirstnameMaxlength())"
 										placeholder="*"
 										sclass="form-input-text"
+										focus="true"
 										tooltiptext="${c:l('msg.ui.validation.err.valueRequired')}"
 										tabindex="2"
 										hflex="1" />
@@ -130,6 +122,32 @@
 										hflex="1" />
 									<hbox hflex="1" align="end" pack="end" sclass="form-grid-validation-hbox">
 										
+									</hbox>
+								</vbox>
+							</cell>
+						</row>
+						
+						<row>
+							<cell >
+								<vbox hflex="1">
+									<label value="${c:l('txt.ui.common.email')} 1"/>
+									<label value="" />
+									<hbox hflex="1">
+										<textbox id="representativeEmail1"
+											value="@bind(fx.user.contact.email1) @validator(vm.emailValidator, notNull=true)"
+											maxlength="@load(vm.getEmailMaxlength())"
+											placeholder="*"
+											sclass="form-input-text"
+											focus="true"
+											tooltiptext="${c:l('msg.ui.validation.err.valueRequired')}"
+											onChange="@command('validateUniqueUsernameCmd', email=self.value, fx=fx)"
+											tabindex="1"
+											hflex="1" />
+									</hbox>
+									<hbox hflex="1" align="end" pack="end" sclass="form-grid-validation-hbox">
+										<span sclass="alert alert-danger" hflex="min" visible="@load(not empty vmsgs[representativeEmail1])" >
+											<label value="@bind(vmsgs[representativeEmail1])" />
+										</span>	
 									</hbox>
 								</vbox>
 							</cell>
