change usernme base functions, course representative and admin

--- a/scb-ui-zk/src/main/webapp/pages/secured/ADMIN/uzivatel.zul
+++ b/scb-ui-zk/src/main/webapp/pages/secured/ADMIN/uzivatel.zul
@@ -42,15 +42,20 @@
 						<cell style="padding-top:20px">
 							<vlayout hflex="1">
 								<label value="${c:l('txt.ui.common.Username')}"/>
-								<textbox id="representativeUsername"
-									value="@bind(fx.user.username) @validator(vm.notNullValidator)" 
-									maxlength="100"
-									placeholder="*"
-									readonly="@load(vm.updateMode)"
-									sclass="form-input-text"
-									tooltiptext="${c:l('msg.ui.validation.err.valueRequired')}"
-									tabindex="12"
-									hflex="1" />
+								<hbox hflex="1">
+									<textbox id="representativeUsername"
+										value="@bind(fx.user.username) @validator(vm.notNullValidator)" 
+										maxlength="100"
+										placeholder="*"
+										readonly="@load(vm.updateMode)"
+										sclass="form-input-text"
+										tooltiptext="${c:l('msg.ui.validation.err.valueRequired')}"
+										tabindex="12"
+										hflex="1" />
+									<button label="${c:l('txt.ui.common.change')}"
+										onClick="@command('changeUsernameCmd')"
+										if="${vm.isLoggedUserAdmin()}"/>
+								</hbox>
 								<validMsg  hflex="1"  vmsg="${vmsgs}" elem="${representativeUsername}"/>
 							</vlayout>
 						</cell>
