--- a/scb-ui-zk/src/main/webapp/pages/shared/prihlaska.zul
+++ b/scb-ui-zk/src/main/webapp/pages/shared/prihlaska.zul
@@ -65,7 +65,7 @@
 							<rows>
 								<row>
 									<cell>
-										<!-- Email/Username jmeno -->
+										<!-- Email/Uzivatelske jmeno -->
 										<vbox hflex="1">
 											<hlayout hflex="1">
 												<label value="${c:l('txt.ui.common.email')}"/>
@@ -90,7 +90,7 @@
 									</cell>
 								</row>
 								
-								<row if="${!common:isUserLogged()}">
+								<row>
 									<cell>
 										<!-- Email/Uzivatelske jmeno zopakovani -->
 										<vbox hflex="1">
