--- a/scb-ui-zk/src/main/webapp/pages/secured/USER/uzivatel.zul
+++ b/scb-ui-zk/src/main/webapp/pages/secured/USER/uzivatel.zul
@@ -34,16 +34,15 @@
 								<vbox hflex="1">
 									<label value="${c:l('txt.ui.common.Username')}"/>
 									<label value="" />
-									<hbox hflex="1">
-										<textbox id="representativeUsername"
-											value="@bind(fx.user.username) @validator(vm.emailValidator, notNull=true)"
-											readonly="true"
-											sclass="form-input-text"
-											tabindex="1"
-											hflex="1" />
-										<button label="${c:l('txt.ui.common.change')}"
-											onClick="@command('changeUsernameCmd')"/>
-									</hbox>
+									<textbox id="representativeUsername"
+										value="@bind(fx.user.username) @validator(vm.emailValidator, notNull=true)"
+										readonly="true"
+										sclass="form-input-text"
+										tabindex="1"
+										hflex="1" />
+									<button label="${c:l('txt.ui.common.change')}"
+										onClick="@command('changeUsernameCmd')"
+										style="margin-top: 5px;" />
 								</vbox>
 							</cell>
 						</row>
