--- a/scb-ui-zk/src/main/webapp/pages/secured/ADMIN/message.zul
+++ b/scb-ui-zk/src/main/webapp/pages/secured/ADMIN/message.zul
@@ -14,181 +14,237 @@
 		validationMessages="@id('vmsgs')"
        	form="@id('fx') @load(vm) @save(vm, before='sendCmd')">
 		
-		<vlayout spacing="0" >	
+		<vlayout spacing="0" >
 			<label value="${c:l('txt.ui.menu.messages')}" sclass="scb-headline-big"/>
 			
-	        <groupbox hflex="1" sclass="no-inner-padding" >            
-	            <vlayout>
-		            <grid hflex="1" >
-						<auxhead>
-							<auxheader class="header" >
-								<vbox hflex="1" vflex="1" sclass="header-div" pack="center" >
-									<label value="${c:l('txt.ui.common.NovaZprava')}" />
-								</vbox>
-							</auxheader>
-						</auxhead>
-						<columns>
-							<column valign="middle" />
-						</columns>
-						<rows>
-							<row>
-								<cell>
-									<vlayout hflex="1" style="margin-top: 5px;">
-										<hlayout>
-											<vlayout width="90px">
-												<button id="mailToBtn" label="${c:l('txt.ui.common.To')}" 
-													sclass="btn-light" 
-													dir="reverse"
-													iconSclass="z-icon-caret-down"
-													style="margin-bottom: 2px; padding-left: 10px; padding-right: 0px;" 
-													onClick="@command('initMailToPopupCmd')" />
-												
-												<popup id="mailToPopupBtn" vflex="1" >
-													<mail-recipient-selection hflex="1" vflex="1" />
-												</popup>
-											</vlayout>
-											<vlayout hflex="1">
-												<!-- MailTo -->
-												<div children="@load(vm.mailToContactSet)" sclass="mail-recipient-list" >
-													<template name="children">
-														<mail-recipient-list-template recipientType="TO" />
-													</template>
-												</div>
-<!-- 												<combobox hflex="1"  -->
-<!-- 													sclass="form-input-text" -->
-<!-- 													focus="true" -->
-<!-- 													tabindex="1" -->
-<!-- 													autodrop="true" -->
-<!-- 													autocomplete="true" -->
-<!-- 													value="@bind(vm.mailTo)" -->
-<!-- 													onSelect="@command('mailRecipientOnOKCmd', recipientType='TO')" -->
-<!-- 								                    model="@load(vm.emailListModel)" > -->
-<!-- 								                </combobox> -->
-												<bandbox id="representativeEmail1" hflex="1" 
-													sclass="form-input-text"
-													focus="true"
-													tabindex="1"
-													value="@bind(vm.mailTo)"
-													onOK="@command('mailRecipientOnOKCmd', recipientType='TO')"
-													onChange="@command('mailRecipientOnOKCmd', recipientType='TO')"
-													mold="rounded"
-													buttonVisible="false"
-													autodrop="false" >
-<!-- 													<bandpopup hflex="1" height="530px" id="mailToPopup" > -->
-<!-- 														<mail-recipient-selection hflex="1" />							 -->
-<!-- 													</bandpopup> -->
-												</bandbox>
-												<vbox hflex="1" align="end" visible="@load(!vm.ccVisible)" >
-													<a label="${c:l('txt.ui.common.Copy')}" 
-														onClick="@command('ccVisibleCmd')"
-														style="text-decoration: none; margin-right: 10px;" 
-														iconSclass="z-icon-plus" />
-												</vbox>
-											</vlayout>
-										</hlayout>
-										
-										<hlayout style="margin-top: 30px; margin-bottom: 15px;" visible="@load(vm.ccVisible)">
-											<vlayout width="90px">
-												<button id="mailCcBtn" 
-													label="${c:l('txt.ui.common.Copy')}" 
-													sclass="btn-light"
-													dir="reverse"
-													iconSclass="z-icon-caret-down"
-													style="margin-bottom: 2px; padding-left: 10px; padding-right: 0px;"
-													onClick="@command('initMailCcPopupCmd')" />
-												<popup id="mailCcPopupBtn">
-													<mail-recipient-selection hflex="1" />
-												</popup>
-											</vlayout>
-											<vlayout hflex="1">
-												<!-- MailCc -->
-												<div children="@load(vm.mailCcContactSet)" sclass="mail-recipient-list" >
-													<template name="children">
-														<mail-recipient-list-template recipientType="CC" />
-													</template>
-												</div>
-												<bandbox id="ccTxt" hflex="1" 
-													sclass="form-input-text"
-													value="@bind(vm.mailCc)"
-													onOK="@command('mailRecipientOnOKCmd', recipientType='CC')"
-													onChange="@command('mailRecipientOnOKCmd', recipientType='CC')"
-													tabindex="2" 
-													mold="rounded" 
-													buttonVisible="false"
-													autodrop="false" >
-<!-- 													<bandpopup hflex="1" height="530px" id="mailCcPopup" > -->
-<!-- 														<mail-recipient-selection hflex="1" />										 -->
-<!-- 													</bandpopup> -->
-												</bandbox>
-											</vlayout>
-										</hlayout>
-									</vlayout>
-								</cell>
-							</row>
-							<row>
-								<cell>
-									<hbox hflex="1" align="center">
-										<vbox width="86px" align="center" pack="center">
-											<label value="${c:l('txt.ui.common.Predmet')}" />
+			
+			<tabbox id="tb" hflex="1" style="margin-bottom: 20px;">
+			    <tabs id="tabs">
+			        <tab id="courseInfo" 
+			        	label="${c:l('txt.ui.common.NovaZprava')}" />
+			        <tab id="courseParticipants"
+			        	onSelect="@command('mailSendSelectedCmd')" 
+			        	label="${c:l('txt.ui.common.OdeslaneZpravy')}" />
+			    </tabs>
+			    <tabpanels>
+			        <tabpanel >
+			        	<!-- Nova zprava -->
+				            <vlayout>
+					            <grid hflex="1" >
+									<columns>
+										<column valign="middle" />
+									</columns>
+									<rows>
+										<row>
+											<cell>
+												<vlayout hflex="1" style="margin-top: 5px;">
+													<hlayout>
+														<vlayout width="90px">
+															<button id="mailToBtn" label="${c:l('txt.ui.common.To')}" 
+																sclass="btn-light" 
+																dir="reverse"
+																iconSclass="z-icon-caret-down"
+																style="margin-bottom: 2px; padding-left: 10px; padding-right: 0px;" 
+																onClick="@command('initMailToPopupCmd')" />
+															
+															<popup id="mailToPopupBtn" vflex="1" >
+																<mail-recipient-selection hflex="1" vflex="1" />
+															</popup>
+														</vlayout>
+														<vlayout hflex="1">
+															<!-- MailTo -->
+															<div children="@load(vm.mailToContactSet)" sclass="mail-recipient-list" >
+																<template name="children">
+																	<mail-recipient-list-template recipientType="TO" />
+																</template>
+															</div>
+			<!-- 												<combobox hflex="1"  -->
+			<!-- 													sclass="form-input-text" -->
+			<!-- 													focus="true" -->
+			<!-- 													tabindex="1" -->
+			<!-- 													autodrop="true" -->
+			<!-- 													autocomplete="true" -->
+			<!-- 													value="@bind(vm.mailTo)" -->
+			<!-- 													onSelect="@command('mailRecipientOnOKCmd', recipientType='TO')" -->
+			<!-- 								                    model="@load(vm.emailListModel)" > -->
+			<!-- 								                </combobox> -->
+															<bandbox id="representativeEmail1" hflex="1" 
+																sclass="form-input-text"
+																focus="true"
+																tabindex="1"
+																value="@bind(vm.mailTo)"
+																onOK="@command('mailRecipientOnOKCmd', recipientType='TO')"
+																onChange="@command('mailRecipientOnOKCmd', recipientType='TO')"
+																mold="rounded"
+																buttonVisible="false"
+																autodrop="false" >
+			<!-- 													<bandpopup hflex="1" height="530px" id="mailToPopup" > -->
+			<!-- 														<mail-recipient-selection hflex="1" />							 -->
+			<!-- 													</bandpopup> -->
+															</bandbox>
+															<vbox hflex="1" align="end" visible="@load(!vm.ccVisible)" >
+																<a label="${c:l('txt.ui.common.Copy')}" 
+																	onClick="@command('ccVisibleCmd')"
+																	style="text-decoration: none; margin-right: 10px;" 
+																	iconSclass="z-icon-plus" />
+															</vbox>
+														</vlayout>
+													</hlayout>
+													
+													<hlayout style="margin-top: 30px; margin-bottom: 15px;" visible="@load(vm.ccVisible)">
+														<vlayout width="90px">
+															<button id="mailCcBtn" 
+																label="${c:l('txt.ui.common.Copy')}" 
+																sclass="btn-light"
+																dir="reverse"
+																iconSclass="z-icon-caret-down"
+																style="margin-bottom: 2px; padding-left: 10px; padding-right: 0px;"
+																onClick="@command('initMailCcPopupCmd')" />
+															<popup id="mailCcPopupBtn">
+																<mail-recipient-selection hflex="1" />
+															</popup>
+														</vlayout>
+														<vlayout hflex="1">
+															<!-- MailCc -->
+															<div children="@load(vm.mailCcContactSet)" sclass="mail-recipient-list" >
+																<template name="children">
+																	<mail-recipient-list-template recipientType="CC" />
+																</template>
+															</div>
+															<bandbox id="ccTxt" hflex="1" 
+																sclass="form-input-text"
+																value="@bind(vm.mailCc)"
+																onOK="@command('mailRecipientOnOKCmd', recipientType='CC')"
+																onChange="@command('mailRecipientOnOKCmd', recipientType='CC')"
+																tabindex="2" 
+																mold="rounded" 
+																buttonVisible="false"
+																autodrop="false" >
+			<!-- 													<bandpopup hflex="1" height="530px" id="mailCcPopup" > -->
+			<!-- 														<mail-recipient-selection hflex="1" />										 -->
+			<!-- 													</bandpopup> -->
+															</bandbox>
+														</vlayout>
+													</hlayout>
+												</vlayout>
+											</cell>
+										</row>
+										<row>
+											<cell>
+												<hbox hflex="1" align="center">
+													<vbox width="86px" align="center" pack="center">
+														<label value="${c:l('txt.ui.common.Predmet')}" />
+													</vbox>
+													<textbox sclass="form-input-text"
+														value="@bind(vm.messageSubject)"
+														tabindex="3"
+														hflex="1" />
+												</hbox>
+											</cell>
+										</row>
+										<row vflex="1">
+											<cell vflex="1">
+												<ckeditor id="cked" hflex="1"
+													height="300px" value="@bind(vm.messageText)"
+													customConfigurationsPath="/resources/js/ckeditor.js" >
+												</ckeditor>
+											</cell>
+										</row>
+									</rows>
+								</grid>
+								
+								<vlayout children="@load(vm.attachmentList)" style="margin-left: 10px;" >
+									<template name="children">
+										<vbox align="start" pack="center" style="margin: 10px;">
+											<hbox align="center" >
+												<a iconSclass="z-icon-download" 
+													onClick="@command('downloadAttachmentCmd', item=each)" />
+												<a label="@load(each.name)" />
+												<a onClick="@command('removeAttachmentCmd', item=each)" 
+													iconSclass="z-icon-times" 
+													style="margin-left: 5px;"
+								                	tooltiptext="${c:l('txt.ui.common.remove')}" />
+											</hbox>
 										</vbox>
-										<textbox sclass="form-input-text"
-											value="@bind(vm.messageSubject)"
-											tabindex="3"
-											hflex="1" />
-									</hbox>
-								</cell>
-							</row>
-							<row vflex="1">
-								<cell vflex="1">
-									<ckeditor id="cked" hflex="1"
-										height="300px" value="@bind(vm.messageText)"
-										customConfigurationsPath="/resources/js/ckeditor.js" >
-									</ckeditor>
-								</cell>
-							</row>
-						</rows>
-					</grid>
-					
-					<vlayout children="@load(vm.attachmentList)" style="margin-left: 10px;" >
-						<template name="children">
-							<vbox align="start" pack="center" style="margin: 10px;">
-								<hbox align="center" >
-									<a iconSclass="z-icon-download" 
-										onClick="@command('downloadAttachmentCmd', item=each)" />
-									<a label="@load(each.name)" />
-									<a onClick="@command('removeAttachmentCmd', item=each)" 
-										iconSclass="z-icon-times" 
-										style="margin-left: 5px;"
-					                	tooltiptext="${c:l('txt.ui.common.remove')}" />
+									</template>
+								</vlayout>
+								
+								<hbox align="start" 
+									pack="start" 
+									hflex="1"
+									style="margin-left: 10px; margin-top: 10px;" >
+									<button onClick="@command('sendCmd')"
+										label="${c:l('txt.ui.common.Odeslat')}" 
+						      			iconSclass="z-icon-paper-plane"
+						      			tabindex="5"
+						      			sclass="btn-success"
+						      			style="margin-left: 10px;margin-bottom: 10px;" />
+						      		<button upload="true,native"
+						      			onUpload="@command('uploadCmd', event=event)"
+						      			iconSclass="z-icon-paperclip" 
+						      			tooltiptext="${c:l('txt.ui.common.FileAttachments')}"
+										sclass="btn-light fix-btn-icon"
+										tabindex="6"
+										style="margin-left: 10px;margin-bottom: 10px;" />
+									<button onClick="@command('clearMessageCmd')"
+										label="${c:l('txt.ui.common.ThrowOut')}"
+										tooltiptext="${c:l('txt.ui.common.ThrowOut')}"
+										sclass="btn-light fix-btn-icon"
+						      			iconSclass="z-icon-trash"
+						      			style="margin-left: 10px;margin-bottom: 10px;" />
 								</hbox>
-							</vbox>
-						</template>
-					</vlayout>
-	            </vlayout>
-	        </groupbox>
+																
+				            </vlayout>
+			        </tabpanel>
+			        <tabpanel hflex="1">
+			        	<!-- Odeslane zpravy -->
+			        	<vbox spacing="0" hflex="1" >
+		                    <listbox model="@load(vm.mailSendList)"
+								id="courseList"
+								hflex="1"
+								height="563px"
+								multiple="true"
+								checkmark="true"
+								selectedItems="@bind(vm.mailSendSelectedList)"
+								emptyMessage="${c:l('txt.ui.common.noDataFound')}"
+								class="listbox-400 mobile-inherit-width" >
+					        
+						        <!-- Filter -->
+<!-- 									<auxhead height="37px"> -->
+<!-- 										<auxheader class="filter"> -->
+<!-- 										</auxheader> -->
+<!-- 									</auxhead> -->
+								
+								<listhead>
+						            <listheader sort="auto(to)" 
+						            	align="left" 
+						            	hflex="min" />
+						            <listheader 
+						            	tooltiptext="${c:l('txt.ui.common.participantCount')}" 
+						            	sort="auto(subject)" 
+						            	align="left"
+						            	hflex="1"  />
+						            <listheader width="170px" align="center" />
+						        </listhead>
+						        <template name="model">
+						            <listitem>
+						                <listcell label="${each.to}" />
+						                <listcell label="${each.subject}" />
+						                <listcell label="@load(each.modifAt) @converter(vm.dateTimeConverter)" />
+						            </listitem>
+						        </template>
+						    </listbox>
+		                </vbox>
+<!-- 			                <vbox hflex="2"> -->
+<!-- 			                	<ckeditor hflex="1" -->
+<!-- 									height="420px"  -->
+<!-- 									value="@bind(vm.mailSendSelected.text)" -->
+<!-- 									customConfigurationsPath="/resources/js/ckeditor.js" > -->
+<!-- 								</ckeditor> -->
+<!-- 			                </vbox> -->
+			        </tabpanel>
+			    </tabpanels>
+			</tabbox>
 		</vlayout>
-		
-		<hbox align="start" pack="start" hflex="1" >
-			<button onClick="@command('sendCmd')"
-				label="${c:l('txt.ui.common.Odeslat')}" 
-      			iconSclass="z-icon-paper-plane"
-      			tabindex="5"
-      			sclass="btn-success"
-      			style="margin-left: 10px;margin-bottom: 10px;" />
-      		<button upload="true,native"
-      			onUpload="@command('uploadCmd', event=event)"
-      			iconSclass="z-icon-paperclip" 
-      			tooltiptext="${c:l('txt.ui.common.FileAttachments')}"
-				sclass="btn-light fix-btn-icon"
-				tabindex="6"
-				style="margin-left: 10px;margin-bottom: 10px;" />
-			<button onClick="@command('clearMessageCmd')"
-				label="${c:l('txt.ui.common.ThrowOut')}"
-				tooltiptext="${c:l('txt.ui.common.ThrowOut')}"
-				sclass="btn-light fix-btn-icon"
-      			iconSclass="z-icon-trash"
-      			style="margin-left: 10px;margin-bottom: 10px;" />
-		</hbox>
-		
 	</div>
 </zk>
