--- a/scb-ui-zk/src/main/webapp/pages/secured/ADMIN/message.zul
+++ b/scb-ui-zk/src/main/webapp/pages/secured/ADMIN/message.zul
@@ -225,23 +225,50 @@
 						            	align="left"
 						            	hflex="1"  />
 						            <listheader width="170px" align="center" />
+						            <listheader width="65px" align="center" />
 						        </listhead>
 						        <template name="model">
 						            <listitem>
-						               <listcell label="${each.to}" style="white-space: nowrap;" />
-						               <listcell label="${each.subject}" />
-						               <listcell label="@load(each.modifAt) @converter(vm.dateTimeConverter)" />
+						            	<listcell style="white-space: nowrap;" >
+						               		${each.to}
+						            	</listcell>
+						            	<listcell label="${each.subject}" />
+						            	<listcell label="@load(each.modifAt) @converter(vm.dateTimeConverter)" />
+						            	<listcell>
+						               		<a sclass="big-icon"
+						               			iconSclass="z-icon-check-circle" 
+						               			style="color: green;"
+						               			tooltiptext="${c:l('txt.ui.mail.SendSuccess')}"
+						               			if="${each.success}" />
+						               		<a sclass="big-icon"
+						               			iconSclass="z-icon-exclamation-triangle" 
+						               			style="color: red;"
+						               			tooltiptext="${c:l('txt.ui.mail.SendFailed')}"
+						               			popup="failedSendPopup_${each.uuid}, position=after_end"
+						               			if="${!each.success}" />
+						               		<popup id="failedSendPopup_${each.uuid}" width="440px">
+						               			<vbox hflex="1">
+						               				<label value="${c:l('txt.ui.mail.SendFailed')}"/>
+						               				<textbox multiline="true"
+						               					rows="15"
+						               					hflex="1"
+						               					readonly="true"
+						               					value="${each.description}"/>
+						               			</vbox>
+						               		</popup>
+						               	</listcell>
 						            </listitem>
+						            
+<!-- 						            <popup id="mailContentPopup_${each.uuid}" width="440px"> -->
+<!-- 				               			<ckeditor hflex="1" -->
+<!-- 											height="420px"  -->
+<!-- 											value="@bind(vm.mailSendSelected.text)" -->
+<!-- 											customConfigurationsPath="/resources/js/ckeditor.js" > -->
+<!-- 										</ckeditor> -->
+<!-- 				               		</popup>	 -->
 						        </template>
 						    </listbox>
 		                </vbox>
-<!-- 			                <vbox hflex="2"> -->
-<!-- 			                	<ckeditor hflex="1" -->
-<!-- 									height="420px"  -->
-<!-- 									value="@bind(vm.mailSendSelected.text)" -->
-<!-- 									customConfigurationsPath="/resources/js/ckeditor.js" > -->
-<!-- 								</ckeditor> -->
-<!-- 			                </vbox> -->
 			        </tabpanel>
 			    </tabpanels>
 			</tabbox>
